--- a/index.html
+++ b/index.html
@@ -6947,7 +6947,7 @@ acc.gsfk.desc = 'Locked vessel containing a volatile tissue sample from the plag
 acc.gsfk.slot = 8;
 acc.gsfk.stype = 3;
 acc.gsfk.rar = 2;
-acc.gsfk.oneq=function(){you.res.ph-=.04;you.caff[6]+=35}
+acc.gsfk.oneq=function(){you.res.ph-=.04;you.caff[6]+=35;you.caff[0]+=600}
 acc.gsfk.onuneq=function(){you.res.ph+=.04;you.caff[6]-=35}
 
 acc.jln1 = new Eqp(); acc.jln1.id = 40053;
